--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section class="pagos">
     <h2>Formas de Pago</h2>
     <p><strong>Nequi:</strong> 3116516861</p>
-    <p><strong>Bancolombia:</strong> 1087648104</p>
+    <p><strong>Llave Bancolombia:</strong> 1087648104</p>
     <p><strong>Titular:</strong> Edixon Fernando Gomez Carlosama</p>
     <p>Después de hacer el pago, envíanos el comprobante por WhatsApp para confirmar tu pedido.</p>
   </section>
