--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <p><strong>Llave Bancolombia:</strong> 1087648104</p>
     <p><strong>Titular:</strong> Edixon Fernando Gomez Carlosama</p>
     <p>Después de hacer el pago, envíanos el comprobante por WhatsApp para confirmar tu pedido.</p>
+     <p>los envios tardan aproximadamente 10 dias habiles con servientrega o interrrapidisimo.</p>
   </section>
 
   <footer>
