--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
       <img src="img/1.jpg" alt="Gorra 1" />
       <h3>Gorra California Roja</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Negra%20Clásica%20de%20TuGorra">Comprar por WhatsApp</a>
+      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
 
     <div class="producto">
       <img src="img/2.jpg" alt="Gorra 2" />
       <h3>Gorra California Vinotinto</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Roja%20Urbana%20de%20TuGorra">Comprar por WhatsApp</a>
+       <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
 
     <div class="producto">
       <img src="img/3.jpg" alt="Gorra 3" />
       <h3>Gorra California verde</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Blanca%20Street%20de%20TuGorra">Comprar por WhatsApp</a>
+       <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
   </section>
 
@@ -107,21 +107,21 @@
       <img src="img/4.jpg" alt="Gorra 1" />
       <h3>Gorra California azul</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Negra%20Clásica%20de%20TuGorra">Comprar por WhatsApp</a>
+       <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
 
     <div class="producto">
       <img src="img/5.jpg" alt="Gorra 2" />
       <h3>Gorra California negra</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Roja%20Urbana%20de%20TuGorra">Comprar por WhatsApp</a>
+       <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
 
     <div class="producto">
       <img src="img/6.jpg" alt="Gorra 3" />
       <h3>Gorra California blanca</h3>
       <p>Precio: $25.000</p>
-      <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20la%20Gorra%20Blanca%20Street%20de%20TuGorra">Comprar por WhatsApp</a>
+       <a class="whatsapp-btn" href="https://wa.me/573122284474?text=Hola%2C%20quiero%20comprar%20una%20Gorra%20de%20TuGorra">Comprar por WhatsApp</a>
     </div>
   </section>
 
